--- a/iOS/Wineot.iOS.csproj
+++ b/iOS/Wineot.iOS.csproj
@@ -164,9 +164,10 @@
     <ImageAsset Include="Resources\Images.xcassets\AppIcons.appiconset\Icon.png" />
     <ImageAsset Include="Resources\Images.xcassets\AppIcons.appiconset\Icon%402x.png" />
     <ImageAsset Include="Resources\Images.xcassets\LaunchImage.launchimage\Contents.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <InterfaceDefinition Include="Resources\LaunchScreen.xib" />
+    <ImageAsset Include="Resources\Images.xcassets\LaunchImage.launchimage\background-667h%402x.png" />
+    <ImageAsset Include="Resources\Images.xcassets\LaunchImage.launchimage\background%40x2.png" />
+    <ImageAsset Include="Resources\Images.xcassets\LaunchImage.launchimage\background-568h%402x.png" />
+    <ImageAsset Include="Resources\Images.xcassets\LaunchImage.launchimage\background.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -181,14 +182,6 @@
   <Import Project="..\packages\Xamarin.Insights.1.10.6\build\Xamarin.iOS10\Xamarin.Insights.targets" Condition="Exists('..\packages\Xamarin.Insights.1.10.6\build\Xamarin.iOS10\Xamarin.Insights.targets')" />
   <Import Project="..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <ItemGroup>
-    <BundleResource Include="Resources\background.jpg">
-      <LogicalName>Wineot.Resources.background.jpg</LogicalName>
-    </BundleResource>
-    <BundleResource Include="Resources\background%402x.jpg" />
-    <BundleResource Include="Resources\background%403x.jpg" />
-    <BundleResource Include="Resources\logo-black.png" />
-    <BundleResource Include="Resources\logo-black%402x.png" />
-    <BundleResource Include="Resources\logo-black%403x.png" />
     <BundleResource Include="Resources\unlock.png" />
     <BundleResource Include="Resources\unlock%402x.png" />
     <BundleResource Include="Resources\unlock%403x.png" />
@@ -208,6 +201,16 @@
     <BundleResource Include="Resources\history%402x.png" />
     <BundleResource Include="Resources\history%403x.png" />
     <BundleResource Include="Resources\flags\fr.png" />
+    <BundleResource Include="Resources\logo-black.png" />
+    <BundleResource Include="Resources\logo-black%402x.png" />
+    <BundleResource Include="Resources\logo-black%403x.png" />
+    <BundleResource Include="Resources\background-568h%402x.png" />
+    <BundleResource Include="Resources\background%40x2.png" />
+    <BundleResource Include="Resources\background-667h%402x.png" />
+    <BundleResource Include="Resources\background.png" />
+    <BundleResource Include="Resources\unlike.png" />
+    <BundleResource Include="Resources\unlike%402x.png" />
+    <BundleResource Include="Resources\unlike%403x.png" />
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="Resources\Images.xcassets\AppIcons.appiconset\iTunesArtwork" />
