--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="xamarinios10" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="SQLiteNetExtensions" version="1.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.Svg" version="1.0.0.26" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="xamarinios10" />
   <package id="Xamarin.Insights" version="1.10.6" targetFramework="xamarinios10" />
