--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="MonoAndroid60" />
+  <package id="Plugin.CurrentActivity" version="1.0.0" targetFramework="MonoAndroid60" />
+  <package id="Plugin.Permissions" version="1.1.1" targetFramework="MonoAndroid60" />
+  <package id="Xam.Plugin.Media" version="2.0.1" targetFramework="MonoAndroid60" />
   <package id="Xam.Plugins.Forms.Svg" version="1.0.0.26" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.0.1.1" targetFramework="MonoAndroid60" />
-  <package id="Xamarin.Android.Support.v4" version="23.0.1.1" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.1" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.1" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.1" targetFramework="MonoAndroid60" />
