--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="MonoAndroid50" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="MonoAndroid50" />
+  <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="MonoAndroid50" />
+  <package id="SQLiteNetExtensions" version="1.3.0" targetFramework="MonoAndroid50" />
   <package id="Xam.Plugins.Forms.Svg" version="1.0.0.26" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.0.1.1" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.0.1.1" targetFramework="MonoAndroid60" />
